--- a/src/main/resources/template/Controller.vm
+++ b/src/main/resources/template/Controller.vm
@@ -72,7 +72,7 @@ public class ${tableInfo.beanName}Controller {
     public void export(${tableInfo.beanName}Vo ${tableInfo.shortBeanName}Vo, Pager pager, HttpServletResponse response) {
         //查询数据
         PageInfo<${tableInfo.beanName}Vo> pageInfo = ${tableInfo.shortBeanName}Service.list(${tableInfo.shortBeanName}Vo, pager);
-        ExcelCommonUtils.exportCommonNew("${tableInfo.tableComment}", "序号", pageInfo.getList(), ${tableInfo.beanName}Vo.class, response, ExcelParamDto.builder().headerType(CommonConstant.ONE_INTEGER).build());
+        ExcelCommonUtils.exportCommonNew("${tableInfo.tableComment}", "序号", pageInfo.getList(), ${tableInfo.beanName}Vo.class, response, null);
 
     }
 
