--- a/src/main/resources/template/Mapper.vm
+++ b/src/main/resources/template/Mapper.vm
@@ -1,6 +1,7 @@
 package ${mapperPackage};
 
 import ${beanPackage}.${tableInfo.beanName};
+import tk.mybatis.mapper.additional.insert.InsertListMapper;
 import tk.mybatis.mapper.common.Mapper;
 
 /**
@@ -10,7 +11,7 @@ import tk.mybatis.mapper.common.Mapper;
  * @version ${version}
  * @date $date
  **/
-public interface ${tableInfo.beanName}Mapper extends Mapper<${tableInfo.beanName}> {
+public interface ${tableInfo.beanName}Mapper extends Mapper<${tableInfo.beanName}>, InsertListMapper<${tableInfo.beanName}> {
 
 
 }
