--- a/src/main/resources/template/Service.vm
+++ b/src/main/resources/template/Service.vm
@@ -2,18 +2,17 @@ package ${servicePackage};
 
 import com.github.pagehelper.PageInfo;
 import ${commonPackage}.entity.Pager;
-import ${commonPackage}.service.BaseService;
 import ${beanPackage}.${tableInfo.beanName};
 import ${voPackage}.${tableInfo.beanName}Vo;
 
 /**
- * ${tableInfo.beanName}Service  ${tableComment}
+ * ${tableInfo.beanName}Service   ${tableInfo.tableComment}
  *
  * @author ${authorName} (;￢＿￢) 
  * @version ${version}
  * @date $date
  **/
-public interface ${tableInfo.beanName}Service extends BaseService<${tableInfo.beanName}> {
+public interface ${tableInfo.beanName}Service {
 
     /**
      * 根据主键查询（已判断 deleted 返回 null）
@@ -34,18 +33,18 @@ public interface ${tableInfo.beanName}Service extends BaseService<${tableInfo.be
      */
     PageInfo<${tableInfo.beanName}Vo> list(${tableInfo.beanName}Vo ${tableInfo.shortBeanName}Vo, Pager pager);
     #end
-    #if(${method} == "listInfo")
 
+    #if(${method} == "getInfo")
     /**
      * 详情查询
      *
      * @param id 主键
      * @return ${tableInfo.beanName}Vo
      */
-    ${tableInfo.beanName}Vo listInfo(Long id);
+    ${tableInfo.beanName}Vo getInfo(Long id);
     #end
-    #if(${method} == "save")
 
+    #if(${method} == "save")
     /**
      * 保存
      *
@@ -53,6 +52,7 @@ public interface ${tableInfo.beanName}Service extends BaseService<${tableInfo.be
      */
     void save(${tableInfo.beanName}Vo ${tableInfo.shortBeanName}Vo);
     #end
+
     #if(${method} == "deleted")
     /**
      * 删除操作
