--- a/src/main/resources/template/EntityVo.vm
+++ b/src/main/resources/template/EntityVo.vm
@@ -42,11 +42,51 @@ public class ${tableInfo.beanName}Vo extends ${tableInfo.beanName} {
      **/
     private String displayUpdateUser;
 
-#if($status)
+#foreach($field in ${tableInfo.tableFields})
+    #if(${field.filed} == "status")
     /**
     * 显示状态
     **/
     private String displayStatus;
+    #end
+
+    #if(${field.filed} == "type")
+    /**
+    * 显示类型
+    **/
+    private String displayType;
+    #end
+
+    #if(${field.filed} == "skuId")
+    /**
+    * sku编码
+    **/
+    private String skuCode;
+
+    /**
+    * sku名称
+    **/
+    private String skuName;
+
+    /**
+    * sku单位
+    **/
+    private String unitName;
+    #end
+
+    #if(${field.filed} == "warehouseId")
+    /**
+    * 客户名称
+    **/
+    private String warehouseName;
+    #end
+
+    #if(${field.filed} == "customerId")
+    /**
+    * 客户名称
+    **/
+    private String customerName;
+    #end
 #end
 
     /**
