--- a/src/main/resources/template/Entity.vm
+++ b/src/main/resources/template/Entity.vm
@@ -28,9 +28,23 @@ import java.util.Date;
 public class ${tableInfo.beanName} implements Serializable {
 #foreach($field in ${tableInfo.tableFields})
 
+    #if(${field.filed} == "type")
+    /**
+    * ${field.comment}
+    *
+    * @see ${enumPackage}.${tableInfo.beanName}TypeEnum
+    **/
+    #elseif(${field.filed} == "status")
+    /**
+    * ${field.comment}
+    *
+    * @see ${enumPackage}.${tableInfo.beanName}StatusEnum
+    **/
+    #else
     /**
      * ${field.comment}
      **/
+    #end
     #if(${field.filed} == "id")
     @Id
     #end
@@ -40,6 +54,11 @@ public class ${tableInfo.beanName} implements Serializable {
     #end
     #if(${field.type} == "Date")
     @JsonFormat(pattern = "yyyy-MM-dd HH:mm:ss", timezone = "GMT+8")
+    #end
+    #if(${field.filed} == "deleted")
+    @Builder.Default
+    private ${field.type} ${field.property} = 0;
+        #break;
     #end
     private ${field.type} ${field.property};
 #end
